# helios-glfw

./: .gitignore  CMakeLists.txt  README.md
cmake/: helios-glfwConfig.cmake.in
src/glfw/: GLFWPlatformManager.ixx  README.md  _module.ixx
src/glfw/components/: GLFWWindowHandleComponent.ixx  GLFWWindowUserPointerComponent.ixx  README.md  _module.ixx
src/glfw/systems/: GLFWWindowCloseSystem.ixx  README.md  _module.ixx
src/glfw/types/: GLFWWindowUserPointer.ixx  README.md  _module.ixx
tests/: glfw_smoke.test.cpp
